Bug 412060 - fill with opacity doesn't work while using some selection tools
Summary: fill with opacity doesn't work while using some selection tools
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 4.2.6
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-19 12:22 UTC by ramskullsart
Modified: 2021-09-11 08:45 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ramskullsart 2019-09-19 12:22:10 UTC
SUMMARY
A big part of my work flow is filling selections with a base color. I noticed that I can't make selections and quickly fill them anymore with a shortcut while im still using selection tool. Erase and fill (without opacity setting) still works, however. 

The rectangle and circle select tools work as I expect them to, but the other selection tools have size and opacity grayed out and I can't use fill shortcut until I change to brush tool

STEPS TO REPRODUCE
1. make a selection using a selection tool other than circle/rectangle
2. try to fill using fill with foreground color(opacity)[this would be ctrl+shift+backspace by default] shortcut
3. make selection using rectangle/circle tool
4. can change opacity of fill
5. step #2 again 

OBSERVED RESULT
size and opacity options are grayed out. opacity is set to 0%

EXPECTED RESULT
opacity options should still be usable because there is the option to fill with opacity

SOFTWARE/OS VERSIONS
Windows: 10
Qt Version: 5.12.4

ADDITIONAL INFORMATION
Comment 1 Scott Petrovic 2019-09-19 13:05:46 UTC
I can confirm this. When they say it is "greyed out", quite a few items on the toolbar get greyed out when you select most of the selection tools. For some reason the rectangle and circle selection tools don't grey out toolbar items. 
We would have to look in the code to see why certain selection tools are doing that.
Comment 2 Ahab Greybeard 2019-09-20 10:38:15 UTC
Using the 4.3.0-prealpha (git 02bdc53) appimage on Debian 10 I see the following:

Rectangle, circle and polygonal selection tools all maintain the opacity slider and each of those selection tools can have its own different and independent opacity percentage.

The outline selection tool greys out the opacity slider (and others) and sets the opacity to 100%.
Comment 3 Halla Rempt 2019-09-28 08:42:56 UTC
I suspect this is a matter of certain actions not being created in the tool factory.
Comment 4 Halla Rempt 2019-10-10 13:59:17 UTC
I was wrong. The difference is that rect/circle/polygonal create a vector selection by default, while outline/magic wand etc create a pixel selection by default.
Comment 5 elkmug 2020-07-03 20:54:45 UTC
Just FYI for anybody that's interested, there is a workaround for this issue. 

You can change the opacity of selection tools with disabled opacity fields by using the default keyboard shortcuts for changing opacity. 'i' for more transparent, 'o' for more opaque. 

Your limited to 10% percent increments, but it's better than having to switch tools.
Comment 6 Halla Rempt 2021-09-09 13:41:16 UTC
Git commit 7fa18e1656cbbf7fa9812c3a08857fb477efbd19 by Halla Rempt.
Committed on 09/09/2021 at 13:41.
Pushed by rempt into branch 'master'.

Don't disable the paintop box sliders

It's fine if people can play with it even if the current tool doesn't
use it.

M  +0    -14   libs/ui/kis_paintop_box.cc

https://invent.kde.org/graphics/krita/commit/7fa18e1656cbbf7fa9812c3a08857fb477efbd19
Comment 7 Halla Rempt 2021-09-11 08:45:53 UTC
Git commit 057cd3474cb0542c610f2b4c9aba1e7ced9c4363 by Halla Rempt.
Committed on 11/09/2021 at 08:45.
Pushed by rempt into branch 'krita/5.0'.

Don't disable the paintop box sliders

It's fine if people can play with it even if the current tool doesn't
use it.
(cherry picked from commit 7fa18e1656cbbf7fa9812c3a08857fb477efbd19)

M  +0    -14   libs/ui/kis_paintop_box.cc

https://invent.kde.org/graphics/krita/commit/057cd3474cb0542c610f2b4c9aba1e7ced9c4363