Don't disable the paintop box sliders

It's fine if people can play with it even if the current tool doesn't
use it.

BUG:412060